[gd_scene load_steps=2 format=3 uid="uid://cthrmiddwrhfq"]

[ext_resource type="Script" path="res://scripts/Dungeon.gd" id="1_pr1di"]

[node name="DungeonGenerator" type="Node2D"]
script = ExtResource("1_pr1di")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3.3, 3.3)

[node name="Button" type="Button" parent="."]
offset_left = -170.0
offset_top = -93.0
offset_right = -58.0
offset_bottom = -62.0
text = "GENERATE"

[node name="MapNode" type="Node2D" parent="."]

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
